force-app/main/default/objects/JunkContactRecords__c/JunkContactRecords__c.object-meta.xml
<CustomObject>
    <label>JunkContactRecord</label>
    <nameField>
        <label>JunkContactRecords Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JunkContactRecords</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>