force-app/main/default/objects/JunkContactRecords__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>JunkContactRecords</relationshipLabel>
    <relationshipName>JunkContactRecords</relationshipName>
    <type>Lookup</type>
</CustomField>