force-app/main/default/objects/JunkContactRecords__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <description>To be Used in Upsert Operation for Cleansing</description>
    <externalId>true</externalId>
    <label>ContactId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>