force-app/main/default/objects/JunkContactRecords__c/fields/ContactJunkCharsCleaned__c.field-meta.xml
<CustomField>
    <fullName>ContactJunkCharsCleaned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ContactJunkCharsCleaned</label>
    <type>Checkbox</type>
</CustomField>