force-app/main/default/objects/JunkContactRecords__c/fields/ContactMarkedIsJunk__c.field-meta.xml
<CustomField>
    <fullName>ContactMarkedIsJunk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ContactMarkedIsJunk</label>
    <type>Checkbox</type>
</CustomField>