force-app/main/default/objects/JunkContactRecords__c/fields/IsChild1Outdated__c.field-meta.xml
<CustomField>
    <fullName>IsChild1Outdated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsChild1Outdated</label>
    <type>Checkbox</type>
</CustomField>