force-app/main/default/objects/JunkContactRecords__c/fields/IsChild2Outdated__c.field-meta.xml
<CustomField>
    <fullName>IsChild2Outdated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsChild2Outdated</label>
    <type>Checkbox</type>
</CustomField>