force-app/main/default/objects/JunkContactRecords__c/fields/IsWithJunkChars__c.field-meta.xml
<CustomField>
    <fullName>IsWithJunkChars__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsWithJunkCharSS</label>
    <type>Checkbox</type>
</CustomField>