force-app/main/default/objects/JunkContactRecords__c/fields/IsWithNoChild__c.field-meta.xml
<CustomField>
    <fullName>IsWithNoChild__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsWithNoChild</label>
    <type>Checkbox</type>
</CustomField>