force-app/main/default/objects/JunkContactRecords__c/fields/IsWithNODRMActivity__c.field-meta.xml
<CustomField>
    <fullName>IsWithNODRMActivity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsWithNODRMActivity</label>
    <type>Checkbox</type>
</CustomField>