force-app/main/default/objects/JunkContactRecords__c/fields/IsWithNoTBID__c.field-meta.xml
<CustomField>
    <fullName>IsWithNoTBID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsWithNoTBID</label>
    <type>Checkbox</type>
</CustomField>