force-app/main/default/objects/JunkContactRecords__c/fields/IsWithNOTHUnitJoin__c.field-meta.xml
<CustomField>
    <fullName>IsWithNOTHUnitJoin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsWithNOTHUnitJoin</label>
    <type>Checkbox</type>
</CustomField>